<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="FB_Conveyor1Sequence" Id="{d1cbbee1-5c76-4fb1-8fd9-630fe8c437d0}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Conveyor1Sequence IMPLEMENTS I_ConveyorSequence
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	nStep : UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="M_ConveyorSequence" Id="{9501bed4-4c2a-40a2-bf5d-35a207bd4c27}">
      <Declaration><![CDATA[
METHOD M_ConveyorSequence : BOOL
VAR_INPUT
	in_rConveyor	: REFERENCE TO FB_Conveyor;
END_VAR
VAR
	stMessage : ST_Message;
	ePeerReturnCode : E_PeerReturnCode;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE nStep OF
	
	0 :
 
		IF in_rConveyor.in_bStart THEN
			in_rConveyor.M_StartConveyor();
			nStep := 20;
		END_IF
		
	20 :
	
		IF in_rConveyor.out_fbSensorStop.GetTriggerSignal THEN
			in_rConveyor.M_StopConveyor();
			nStep := 30;
		END_IF
		
	30 :
	
		stMessage :=
			F_Message(
				eFromPeer := E_PeersList.ePEER_CONVEYOR_1,
				eToPeer := E_PeersList.ePEER_CONVEYOR_2,
				eMessage := E_MessageList.eCONVEYOR_1_AT_TRANSFER_POINT
			);
		in_rConveyor.M_SendMessage(stMessage);
 		nStep := 40;
	
	40 : 
	
		stMessage := 
			F_Message(
				eFromPeer := E_PeersList.ePEER_CONVEYOR_4,
				eToPeer := E_PeersList.ePEER_CONVEYOR_1,
				eMessage := E_MessageList.eCONVEYOR_4_AT_TRANSFER_POINT
			);
			
		ePeerReturnCode := in_rConveyor.M_CompareMessageAndEmptyMailbox(stMessage);
		
		IF ePeerReturnCode = E_PeerReturnCode.eMATCH_FOUND THEN
			in_rConveyor.M_StartConveyor();
			nStep := 50;
		END_IF
	
	50: 
			
		IF in_rConveyor.out_fbSensorMaterialDispatch.GetTriggerSignal THEN
			stMessage := 
				F_Message(
					eFromPeer := E_PeersList.ePEER_CONVEYOR_1,
					eToPeer := E_PeersList.ePEER_CONVEYOR_2,
					eMessage := E_MessageList.eCONVEYOR_1_PACKAGE_DELIVERED
				);
			in_rConveyor.M_StopConveyor();
			in_rConveyor.M_SendMessage(stMessage);
			nStep := 0;
		END_IF		
				
END_CASE]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Conveyor1Sequence">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Conveyor1Sequence.M_ConveyorSequence">
      <LineId Id="7" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="18" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="23" Count="5" />
      <LineId Id="20" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="36" Count="8" />
      <LineId Id="48" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="46" Count="0" />
      <LineId Id="53" Count="1" />
      <LineId Id="65" Count="0" />
      <LineId Id="68" Count="4" />
      <LineId Id="66" Count="0" />
      <LineId Id="73" Count="2" />
      <LineId Id="67" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>